[package]
name = "onetun"
version = "0.3.4"
edition = "2021"
license = "MIT"
description = "A cross-platform, user-space WireGuard port-forwarder that requires no system network configurations."
authors = ["Aram Peres <aram.peres@gmail.com>"]
repository = "https://github.com/aramperes/onetun"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Required dependencies (bin and lib)
boringtun = { version = "0.4.0", default-features = false }
log = "0.4"
anyhow = "1"
tokio = { version = "1", features = [ "rt", "sync", "io-util", "net", "time", "fs", "macros" ] }
futures = "0.3"
rand = "0.8"
nom = "7"
async-trait = "0.1"
priority-queue = "1.3.0"
smoltcp = { version = "0.8.2", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-udp", "socket-tcp"] }
bytes = "1"

# forward boringtuns tracing events to log
tracing = { version = "0.1", default-features = false, features = ["log"] }

# bin-only dependencies
clap = { version = "2.34", default-features = false, features = ["suggestions"], optional = true }
pretty_env_logger = { version = "0.4", optional = true }
async-recursion = "1.0"

[features]
pcap = []
default = [ "bin" ]
bin = [ "clap", "pretty_env_logger", "pcap", "tokio/rt-multi-thread" ]

[lib]
